[package]
name = "parking_lot_vs_std"
version = "0.1.0"
edition = "2021"

[dependencies]
num_cpus = "1.16.0"
parking_lot = "0.12.3"


[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
    "rayon",
] }

[[bench]]
name = "bench_main"
harness = false
